--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<link rel="stylesheet" href="main.css"/>
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+		<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+		<script src="Fuse.js"></script>
 		<script src="districts.js"></script>
 	</head>
 	<body>
@@ -22,10 +24,10 @@
 						<h1>Cities comparison</h1>
 					</td>
 					<td>
-						<input class="first-city" type="text" placeholder="Select first city"/>
+						<input id="first-city" type="search" placeholder="Select first city"/>
 					</td>
 					<td>
-						<input class="second-city" type="text" placeholder="Select second city"/>
+						<input id="second-city" type="search" placeholder="Select second city"/>
 					</td>
 				</tr>
 			</table>
