--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="css/main.css"/>
-		<link rel="stylesheet" href="css/leaflet-search.css"/>
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 		<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
-		<script src="src/leaflet-search.js"></script>
+		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+		<script src="src/query-autocomplete.js"></script>
 		<script src="src/districts.js"></script>
 	</head>
 	<body>
@@ -24,11 +24,11 @@
 					<td>
 						<h1><a href=index.html>Cities comparison</a></h1>
 					</td>
-					<td id="first-city">
-						<!-- <input id="first-city" type="search" placeholder="Select first city"/> -->
+					<td>
+						<input id="first-city" type="search" placeholder="Select first city"/>
 					</td>
-					<td id="second-city">
-						<!-- <input id="second-city" type="search" placeholder="Select second city"/> -->
+					<td>
+						<input id="second-city" type="search" placeholder="Select second city"/>
 					</td>
 				</tr>
 			</table>
