--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 		<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-		<script src="src/districts.js"></script>
+		<!-- <script src="src/districts.js"></script> -->
 	</head>
 	<body>
 		<div class="top">
