--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+		<script src="src/leaflet-providers.js"></script>
 		<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 		<!-- <script src="src/districts.js"></script> -->
@@ -24,9 +25,13 @@
 					<td>
 						<h1><a href=index.html>Cities comparison</a></h1>
 					</td>
+				</tr>
+				<tr>
 					<td>
 						<input id="first-city" type="search" placeholder="Select first city"/>
 					</td>
+				</tr>
+				<tr>
 					<td>
 						<input id="second-city" type="search" placeholder="Select second city"/>
 					</td>
