EventListener on second input

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 				</tr>
 				<tr>
 					<td>
-						<input id="first-city" type="search" placeholder="Select first city"/>
+							<input id="first-city" type="search" placeholder="Select your city"/>
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<input id="second-city" type="search" placeholder="Select second city"/>
+						<input id="second-city" type="search" placeholder="Select city to compare with" disabled/>
 					</td>
 				</tr>
 			</table>
