--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 		<script src="src/leaflet-providers.js"></script>
+		<script src="src/leaflet-layer-overpass.js"></script>
 		<script src="src/proj4.js"></script>
 		<script src="src/proj4leaflet.js"></script>
 		<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
