--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script src="src/leaflet-layer-overpass.js"></script>
 		<script src="src/proj4.js"></script>
 		<script src="src/proj4leaflet.js"></script>
+		<script src="src/osmtogeojson.js"></script>
 		<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	</head>
