--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="css/main.css"/>
+		<!-- <link rel="stylesheet" href="src/leaflet/leaflet.css"/> -->
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 		<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<!-- <script src="src/leaflet/leaflet.js"></script> -->
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 		<script src="src/leaflet-providers.js"></script>
 		<script src="src/leaflet-layer-overpass.js"></script>
