drag and transform

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 				</tr>
 				<tr>
 					<td>
-						<input id="second-city" type="search" placeholder="Select city to compare with" />
+						<input id="second-city" type="search" placeholder="Select city to compare with" disabled/>
+						<input id="adjust" type="button" value="adjust" disabled/>
 					</td>
 				</tr>
 			</table>
